math-core/tests/snapshots/conversion_test__plus_after_open_paren.snap
---
source: math-core/tests/conversion_test.rs
expression: (+x)
---
<math>
    <mo stretchy="false">(</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
</math>
