math-core/tests/snapshots/conversion_test__plus_at_group_end.snap
---
source: math-core/tests/conversion_test.rs
expression: "{4+}x"
---
<math>
    <mrow>
        <mn>4</mn>
        <mo lspace="0" rspace="0">+</mo>
    </mrow>
    <mi>x</mi>
</math>
