math-core/tests/snapshots/conversion_test__plus_before_open_paren.snap
---
source: math-core/tests/conversion_test.rs
expression: x+(x)
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
</math>
