math-core/tests/snapshots/conversion_test__plus_in_braces.snap
---
source: math-core/tests/conversion_test.rs
expression: "4{+}4"
---
<math>
    <mn>4</mn>
    <mo lspace="0" rspace="0">+</mo>
    <mn>4</mn>
</math>
